# manage_my_credit_card

./: .env  Cargo.toml  README.md  auth.db  package-lock.json  package.json
end2end/: package-lock.json  package.json  playwright.config.ts
end2end/tests/: auth-and-card.spec.ts  example.spec.ts
src/: app.rs  auth.rs  db.rs  lib.rs  main.rs
style/: main.scss
