[package]
name = "manage_my_credit_card"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8.12" }
leptos_axum = { version = "0.8.6", optional = true }
leptos_meta = { version = "0.8.5" }
leptos_router = { version = "0.8.9" }

axum = { version = "0.8.7", optional = true, features = ["macros"] }
tokio = { version = "1.48.0", features = ["full"], optional = true }
tower = { version = "0.5.2", optional = true }
tower-http = { version = "0.6.6", optional = true, features = ["fs"] }

# Authentication
jsonwebtoken = { version = "10.2.0", optional = true, features = ["rust_crypto"] }
bcrypt = { version = "0.17.1", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Database
sqlx = { version = "0.8.6", optional = true, features = ["runtime-tokio-rustls", "sqlite"] }

# Time
chrono = { version = "0.4.42", optional = true }

console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.105"
http = "1.3.1"
simple_logger = "5.0"
log = "0.4"
web-sys = { version = "0.3", features = ["Window", "Storage", "Location"] }

[features]
hydrate = ["leptos/hydrate"]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:leptos_axum",
    "dep:jsonwebtoken",
    "dep:bcrypt",
    "dep:sqlx",
    "dep:chrono",
    "leptos/ssr",
]

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[package.metadata.leptos]
output-name = "manage_my_credit_card"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
